💄 fixes stupid bottom gap on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -61,7 +61,7 @@ body {
   font-size: var(--step-0);
   line-height: 1.5;
   color: #f8fafc;
-  background-color: #20204e;
+  background-color: black;
   overflow-x: clip !important;
   transition-property: all !important;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
